--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ html{
 
 body{
     min-height: 100%;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     max-width: 1000px;
     margin: auto;
 }
@@ -28,15 +28,13 @@ h1{
 img{
     width: 100%;
 }
-nav{
-    
-}
 
 nav > ul{
     padding: none;
     list-style-type: none;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 
 article{
@@ -60,14 +58,14 @@ a {
     float: right;
 }
 
-.top-nav > ul {
-    justify-content: space-between;
-}
-
 .top-nav a {
     color: lightgray;
 }
 
 .bottom-nav a {
     color: tomato;
+}
+
+.copyright{
+    color: lightgray
 }
